# CraftworksEngine

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  build.bat  compile_commands.json
assets/shaders/: solid_color.fs  solid_color.ppl  solid_color.shader  solid_color.vs
engine/assets/: assets_manager.cpp  assets_manager.h
engine/debug/: debug.h
engine/engine/: engine.cpp  engine.h  main.cpp
engine/filesystem/: file_provider.cpp  file_provider.h  filesystem.cpp  filesystem.h  provider.h
engine/graphics/: renderer.cpp  renderer.h  renderer_backend.h
engine/graphics/opengl/: gl_functions.cpp  gl_functions.h  opengl_renderer.cpp  opengl_renderer.h  opengl_windows.cpp
engine/logger/: log.cpp  log.h
engine/memory/: memory_utils.cpp  memory_utils.h
engine/platform/: platform.h  platform_windows.cpp
engine/utils/: macros.h
